baseline-immutables adds required exports to the java compiler
See https://github.com/immutables/immutables/issues/1379 for
more information